edits, and much more

--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -74,7 +74,7 @@ Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more 
 
 \subsection{Randomization Protocol and Compromises} \label{appendix:randomization}
 
-\noindent Randomization compromises throughout ABC's and CARE's implementations pose a challenge when evaluating the programs' effects. We discuss each case of compromise in detail. Figure~\ref{fig:abc-flow} and Figure~\ref{fig:care-flow} are flow charts that depict the sample from the first-phase randomization through the last data follow-up accounting for all cases of attrition and non-compliance. In Section~\ref{section:methodology},  we propose a methodology for adequately evaluating the programs while accounting for these compromises.\\
+\noindent Randomization compromises throughout ABC's and CARE's implementations pose a challenge when evaluating the programs' effects. We discuss each case of compromise in detail. Figure~\ref{fig:abc-flow} and Figure~\ref{fig:care-flow} are flow charts that depict the sample from the first-phase randomization through the last data follow-up accounting for all cases of attrition and non-compliance.\\
 
 \noindent Although most randomization compromises occurred at early stages, this methodology also accounts for the fact that a few subjects were not in the sample either for the second-phase randomization or for the adult follow-ups. In Appendix~\ref{appendix:data}, we describe the sample reductions that attrition at different stages of the study generates and test potential differences between the subjects who completed data follow-ups and the subjects who did not.\\
 
@@ -121,7 +121,7 @@ Note: This table shows the High-risk Index (HRI) for ABC. A score of 11 or more 
 
 \noindent Finally, two subjects initially assigned to the control group were admitted into treatment. Local authorities requested this because the children were considered highly at risk. Data on them are available from birth to age 8. Although they crossed over from the control group to the treatment group, we consider them to be members of the control group who attrited after age 8.\\
 
-\noindent Analysis of each of these cases leads to the following conclusions. For four subjects, we do not have data to assess them as cases of program attrition, though sensitivity analyses suggest that the treatment effects of the program persist after assigning them the same outcome as the subjects who did the worst in the treatment group. For the subjects who did not comply to treatment, adjusting our estimates for non-compliance when data are available makes little difference. The remaining 14 subjects who did not complete treatment as initially assigned represent various cases of program attrition, for which we propose a correction methodology in Section~\ref{section:methodology}.\\
+\noindent Analysis of each of these cases leads to the following conclusions. For four subjects, we do not have data to assess them as cases of program attrition, though sensitivity analyses suggest that the treatment effects of the program persist after assigning them the same outcome as the subjects who did the worst in the treatment group. For the subjects who did not comply to treatment, adjusting our estimates for non-compliance when data are available makes little difference. The remaining 14 subjects who did not complete treatment as initially assigned represent various cases of program attrition, for which we propose a correction methodology in Appendix~\ref{app:method_partialobs}.\\
 
 \noindent To increase the number of subjects in the sample, the program officers recruited additional subjects who were added to the program before the subjects were 6 months old. Our calculations indicate that there were eight replacements. We cannot distinguish in the data the subjects who were initially randomized from the replacement children and there is no documentation on how these subjects were recruited.\footnote{Three replacements are reported in \citet{Ramey_Campbell_1979_SR}. Three are documented in correspondence with the program officers, which is available from the authors upon request. The other two replacements are implied by the number of subjects who participated in the randomization protocol in each cohort.} After the various compromises, the sample consisted of 111 subjects: 53 in the treatment group and 58 in the control group. The observed characteristics for each subjects indicate that they were eligible for the program; all subjects in the sample have an HRI of 11 or above. \\
 
@@ -181,7 +181,7 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Bryant_et_al_1987
 
 \subsection{Control Substitution}
 
-\noindent In ABC, the families of almost $70\%$ of the control-group subjects enrolled their children in alternative center-based childcare. In CARE, $74\%$ of families in the control group and $62\%$ of families in the family education group enrolled their children in alternative center-based childcare. We refer to this phenomenon as control substitution; accounting for it is fundamental when evaluating the program, as we argue in Section~\ref{section:methodology}. In this Appendix, we thoroughly describe the characteristics and costs of the childcare centers providing alternative treatment, in order to create a comparison with the treatments offered by ABC and CARE.\\
+\noindent In ABC, the families of $75\%$ of the control-group subjects enrolled their children in alternative center-based childcare. In CARE, $74\%$ of families in the control group and $62\%$ of families in the family education group enrolled their children in alternative center-based childcare. We refer to this phenomenon as control substitution; accounting for it is fundamental when evaluating the program, as we argue in Section~\ref{section:methodsquestions}. In this Appendix, we thoroughly describe the characteristics and costs of the childcare centers providing alternative treatment, in order to create a comparison with the treatments offered by ABC and CARE.\\
 
 \noindent Most of the families in the ABC and CARE control groups enrolled their children in alternative preschool that received federal subsidies and, therefore, were regulated. Figure~\ref{fig:ccabc} and Figure~\ref{fig:cccare} show the amount of enrollment into subsidized and non-subsidized care for ABC and CARE, respectively. Subsidized centers were required to have trained staff who were able to implement curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} Thus, we consider these centers to offer high-quality center-based childcare.
 
