updated table 1 and sensitivity table

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -134,10 +134,12 @@ Table~\ref{table:summsend}  summarizes the several instances of sensitivity anal
 Pooled & \checkmark &  &  & \checkmark &  &  & \checkmark &  &   & \checkmark &  &   & \checkmark &  &  \\ 
 Male & & \checkmark &  & & \checkmark & & & \checkmark &  & & \checkmark &  & & \checkmark &  \\ 
 Female & &  & \checkmark & &  & \checkmark & &  & \checkmark & &  & \checkmark & &  & \checkmark  \\  \\ \midrule
-IRR & \textbf{0.12} & \textbf{0.14} & 0.11 & \textbf{0.11} &  \textbf{0.12} & 0.10 & \textbf{0.08} & \textbf{0.11} & 0.05  & 0.08  & \textbf{0.09} & 0.10  & \textbf{0.10} & \textbf{0.13} & 0.10 \\ 
-       & (0.05) & (0.06) & (0.07) & (0.06) &  (0.06) & (0.08) &  (0.03) &  (0.05) &  (0.02) & (0.05) & (0.05) & (0.08)   & (0.06) & (0.06) & (0.08) \\ \\ 
-B/C Ratio & \textbf{5.72} & \textbf{11.44} & \textbf{2.70} & \textbf{4.86} & 8.16  & \textbf{2.17} & \textbf{4.80} & \textbf{10.70} &  1.61 &  2.44 & 4.80 & 1.98  & \textbf{4.82} & \textbf{10.26} & \textbf{2.57} \\  
-                 & (2.38) & (5.60) & (0.99) & (2.17) & (5.38) & (0.72) &  (2.17) &  (5.38) &  (0.72) & (1.19) & (2.93) & (0.97)   & (2.32) & (5.46) & (0.99)  \\ \bottomrule
+
+IRR & \textbf{0.13} & \textbf{0.13} & 0.10 & 	\textbf{0.11} &  \textbf{0.12} & 0.10 &		 \textbf{0.09} & \textbf{0.11} & 0.04  & 	\textbf{0.09}  & 0.08 & 0.09  & 		\textbf{0.12} & \textbf{0.12} & 0.10 \\ 
+       & (0.05) & (0.06) & (0.08) &		 	(0.06) &  (0.06) & (0.08) &  			(0.03) &  (0.05) &  (0.02) & 			(0.05) & 	(0.04) & (0.08)   & 			(0.06) & (0.07) & (0.08) \\ \\ 
+       
+B/C Ratio & \textbf{6.29} & \textbf{11.10} & \textbf{2.45} & 	\textbf{4.86} & 8.22  & \textbf{2.16} & \textbf{5.36} & 10.36 &  1.34 &  	\textbf{3.02} & 4.24 & 1.74  & 		\textbf{5.38} & 9.90 & \textbf{2.32} \\  
+                 & (2.11) & (6.35) & (0.79) & 				(2.18) & (5.35) & (0.70) & 			(2.11) &  (6.36) &  (0.69) & 			(1.14) & (2.72) & (0.72)   & 	(2.04) & (6.13) & (0.76)  \\ \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \footnotesize
